Mega refactor, gradle, bindings, readme, etc